<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">APPEPSA</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="cadastre">CADASTRE-SE</string>
    <string name="entrar">ENTRAR</string>
    <string name="esqueci">ESQUECI MINHA SENHA</string>
    <string name="senha">SENHA:</string>
    <string name="email">EMAIL</string>
    <string name="eTappepsa">SEJA BEM VINDO</string>
    <string name="eTemail">EMAIL</string>
    <string name="eTsenha">SENHA</string>
    <string name="eTesquecisenha">ESQUECI MINHA SENHA</string>
    <string name="bTentrar">ENTRAR</string>
    <string name="bTcadastre">CADASTRE-SE</string>
    <string name="eTbemvindo">SEJA BEM VINDO</string>
    <string name="bemvindo">SEJA BEM VINDO</string>
    <string name="title_activity_cadastro">Cadastro de Usuário</string>
    <string name="title_activity_menu">Menu Principal</string>
    <string name="title_activity_recuperar_senha_main">Recuperar Senha</string>
    <string name="nome">NOME COMPLETO</string>
    <string name="cpf">CPF</string>
    <string name="datanascimento">DATA DE NASCIMENTO</string>
    <string name="celular">CELULAR</string>
    <string name="confirmesenha">CONFIRME SUA SENHA</string>
    <string name="voltar">VOLTAR</string>
    <string name="limpar">LIMPAR</string>
    <string name="cadastrar">CADASTRAR</string>
    <string name="salvar">SALVAR</string>
    <string name="recuperesenha">R</string>
    <string name="informecpf">INFORME SEU CPF</string>
    <string name="informeemal">INFORME SEU EMAIL</string>
    <string name="enviar">ENVIAR</string>
    <string name="gentileza">POR GENTILEZA,</string>
    <string name="textosenha">Faça login com a senha provisória recebida em seu e-mail e altere a mesma em seu perfil de usuário.</string>
    <string name="meuperfil">MEU PERFIL</string>
    <string name="mural">MURAL</string>
    <string name="forum">FORUM CONHECIMENTO</string>
    <string name="faleconosco">FALE CONOSCO</string>
    <string name="sair">SAIR</string>
    <string name="title_activity_menu_usuario_comum">Menu Principal</string>
    <string name="title_activity_perfil_usuario_aluno">Perfil de Usuário</string>
    <string name="permissoes">PERMISSÕES</string>
    <string name="alterarsenha">ALTERAR SENHA</string>
    <string name="menuprincipal">MENU PRINCIPAL</string>
    <string name="title_activity_dicas">DicasActivity</string>
    <string name="dicas">Dicas</string>
    <string name="dicalivros">Livros</string>
    <string name="pessoasdicas">Pessoas</string>
    <string name="sitedicas">Sites</string>
    <string name="livrodica1">Livro um</string>
    <string name="livrodica2">Livro dois</string>
    <string name="sitedica1">Site um</string>
    <string name="sitedica2">Site Dois</string>
    <string name="pessoadica">Pessoa um</string>
    <string name="pessoadica2">Pessoa dois</string>
    <string name="voltardicas">Voltar</string>
    <string name="title_activity_livros">LivrosActivity</string>
    <string name="livros">Página dos livros</string>
    <string name="title_activity_perfil_usuario_alterar_senha">Alterar Senha</string>
    <string name="senhaatual">SENHA ATUAL</string>
    <string name="novasenha">NOVA SENHA</string>
    <string name="confirmenovasenha">CONFIRME NOVA SENHA</string>
    <string name="confirmeemail">CONFIRME EMAIL</string>
    <string name="title_activity_fale_conosco">FaleConosco</string>
    <string name="telefone">(31) 3073-9600</string>
    <string name="sugestao">Sugestão</string>
    <string name="feedback">Feedback</string>
    <string name="reclamacao">Reclamação</string>
    <string name="title_activity_enviado_com_sucesso">EnviadoComSucesso</string>
    <string name="enviadocomsucesso">Enviado com sucesso</string>
    <string name="murallegal">Mural Legal</string>
    <string name="mural_legal">MURAL LEGAL</string>
    <string name="forum_a">FORUM CONHECIMENTO</string>
    <string name="forum_b">FORUM</string>

</resources>
