<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginEnd="15dp"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:layout_marginTop="30dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tVnomecompleto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/eTnomecompleto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/tVemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email" />

    <EditText
        android:id="@+id/eTemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />
    
    <TextView
        android:id="@+id/tVconfirmeemail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmeemail" />

    <EditText
        android:id="@+id/eTconfirmeemail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress" />

    <TextView
        android:id="@+id/tVcpf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cpf" />

    <EditText
        android:id="@+id/eTcpf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/tVdatanascimento"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/datanascimento" />

    <EditText
        android:id="@+id/eTdatanascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="date" />

    <TextView
        android:id="@+id/tVcelular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/celular" />

    <EditText
        android:id="@+id/eTcelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="phone" />

    <TextView
        android:id="@+id/tVsenhacadastro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha" />

    <EditText
        android:id="@+id/eTsenhacadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/tVconfirmesenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmesenha" />

    <EditText
        android:id="@+id/eTconfirmesenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginLeft="10dp" >

        <Button
            android:id="@+id/bTvoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:text="@string/voltar"
            android:onClick="voltar"
            android:textSize="@dimen/FonteBotoes" />

        <Button
            android:id="@+id/bTsalvar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:text="@string/salvar"
            android:textSize="@dimen/FonteBotoes" />

        <Button
            android:id="@+id/bTlimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.43"
            android:text="@string/limpar"
            android:onClick="limpar"
            android:textSize="@dimen/FonteBotoes" />

    </LinearLayout>

</LinearLayout>