<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="25dp"
    android:layout_marginLeft="25dp"
    android:layout_marginRight="25dp"
    android:layout_marginTop="25dp"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tVgentileza"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:text="@string/gentileza" />

    <TextView
        android:id="@+id/tVinformesenha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/informeemal" />

    <EditText
        android:id="@+id/eTemailinforme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:inputType="textEmailAddress" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp" >

        <Button
            android:id="@+id/bTvoltar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:textSize="@dimen/FonteBotoes"
            android:onClick="voltar"
            android:text="@string/voltar" />

        <Button
            android:id="@+id/bTlimpar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:textSize="@dimen/FonteBotoes"
            android:onClick="limpar"
            android:text="@string/limpar" />

        <Button
            android:id="@+id/bTenviar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.61"
            android:textSize="@dimen/FonteBotoes"
            android:onClick="enviar"
            android:text="@string/enviar" />
    </LinearLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/textosenha" />

</LinearLayout>